# Horus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PUBLIC_RELEASE_ROADMAP.md  README.md  SECURITY.md  conftest.py  docker-compose.yml  horus_startup.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/paths/: global_paths.json
docs/: README.md  architecture.md  deployment.md  design-principles.md  development.md  testing.md
mocks/: README.md  openai_server.py  website_server.py
requirements/: base.txt  dev.txt
services/: __init__.py
services/ccu/: README.md  api_key_security_utils.py  ccu.py  ccu.pyproj  test_certificate_system.py  test_jfa_pmm_integration.py  test_ocm_pmm_integration.py  test_pmm_demo.py  test_rcm_pmm_integration.py  test_rla_pmm_integration.py  test_td_pmm_integration.py  test_tpp_pmm_integration.py
services/ccu/CEIM/: ceim.py
services/ccu/CERTM/: certm.py
services/ccu/CMM/: cmm.py
services/ccu/CTMM/: README.md  ctmm.py  run_tests.py  test_sem_pilot_checklist.py  test_t00000001.py  test_t00000002.py  test_t00000003.py  test_t00000004.py  test_t00000005.py  (+35 more)
services/jfa/: JFA_Main.pyproj  JFA_main.py
services/ocm/: README.md  ocm.py  ocm.pyproj  requirements.txt  test_dcm_operations.py  test_o00000028_request_storage.py  test_ocm_integration.py
services/rcm/: RCM_main.py  README.md  config.py  requirements.txt
services/rla/: RLA.pyproj  RLA_main.py
services/td/: README.md  TD_main.py  TDblock.pyproj  requirements.txt  start_td.py
services/tpp/: TPP.pyproj  TPP_main.py
(+452 files in other folders)
